# table-editor

./: Cargo.toml
src/: main.rs
static/: script.js  style.css
templates/: index.html.tera
templates/partials/: table.html.tera
